# whisper-gate

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml  record_and_transcribe.py  run.sh  setup.sh  voice_input_daemon.py  whisper_api.py
.github/: copilot-instructions.md
tests/: test_record_and_transcribe.py  test_voice_input_daemon.py  test_whisper_api.py
